# task-cli

./: .gitignore  README.md  main.py  pyproject.toml  requirement.txt  task-tracker.py
app/: main.py
cli/: commands.py
core/: __init__.py
core/entities/: task.py
core/repositories/: data.json
core/services/: service.py
main/: main.py
tests/: test_task.py
