[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "task-tracker"
version = "0.1.0"
authors = [
    { name = "manohySr", email = "manohyrajaonah@gmail.com" },
]
description = "A task tracking application"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
] 